<resources>
    <string name="app_name">FindUI</string>

    <!-- MyPage -->
    <string name="my_page_guide">프로필 작성을 완료해주세요!</string>
    <string name="my_page_preview">프로필 미리보기</string>
    <string name="my_page_schedule">선호 일정</string>
    <string name="my_page_title_point">매너 점수</string>
    <string name="my_page_title_connected">연결된 상대</string>
    <string name="my_page_title_edit_profile">프로필 수정</string>
    <string name="my_page_title_interview">인터뷰 하기</string>

    <!-- Create Profile -->
    <string name="create_profile_title">프로필 작성</string>
    <string name="create_profile_guide">프로필을 작성해주세요!</string>
    <string name="create_profile_button">프로필 작성하러 가기</string>
    <string name="profile_image_guide"><u>프로필 가이드</u></string>
    <string name="profile_image_title">프로필 사진</string>
    <string name="profile_image_explain">프로필 사진은 최소 3장 이상 업로드 해주세요! (최대6장)</string>
    <string name="profile_image_prev">프로필 사진\n미리보기</string>
    <string name="profile_identity_title">본인 인증</string>
    <string name="profile_identity_go">인증하러 가기</string>
    <string name="profile_introduction_go">소개글 작성하러 가기</string>
    <string name="profile_introduction_explain">당신을 소개해주세요! (최소 30자)</string>
    <string name="profile_introduction_title">소개글</string>
    <string name="profile_account_title">계정 정보</string>
    <string name="profile_account_explain">가입시 기재된 정보로 변경이 불가합니다.</string>
    <string name="profile_account_nickname">닉네임</string>
    <string name="profile_account_place">지역</string>
    <string name="profile_account_gender">성별</string>
    <string name="profile_account_birth">생년월일</string>
    <string name="profile_info_title">기본 정보</string>
    <string name="profile_info_explain">여기에 쓰는 글은 마이 프로필에 노출됩니다.</string>
    <string name="profile_info_select">선택하세요</string>
    <string name="profile_info_job">직업</string>
    <string name="profile_info_office">직장</string>
    <string name="profile_info_drink">음주</string>
    <string name="profile_info_married">결혼</string>
    <string name="profile_info_religion">종교</string>
    <string name="profile_info_smoke">흡연</string>
    <string name="profile_info_form">체형</string>
    <string name="profile_info_tall">키</string>
    <string name="profile_info_mbti">MBTI</string>
    <string name="profile_info_edu">학력</string>
    <string name="profile_intro_title">소개글 작성</string>
    <string name="profile_intro_explain">당신을 소개해주세요!(최소 10자)</string>
    <string name="profile_intro_edit">직업이나 전공, 꿈과 목표가 있다면 알려주세요.</string>

    <!-- Profile Info Dialog -->
    <string name="dialog_info_ok">확인</string>
    <string name="dialog_info_enter">입력해주세요</string>
    <string name="dialog_info_limit">최대 8글자입니다.</string>
    <string name="dialog_info_job">직업을 적어주세요</string>
    <string name="dialog_info_office">직장을 적어주세요</string>

    <!-- Profile Guide -->
    <string name="profile_guide_title">프로필 가이드</string>
    <string name="guide_recommend_first">#이목구비가 선명하게 나온 사진</string>
    <string name="guide_recommend_second">#분위기 있는 바스트 샷</string>
    <string name="guide_recommend_third">#자연스러운 활동 사진</string>
    <string name="guide_recommend_explain">패션 센스가 돋보이는 사진, \n 관심사 또는 취미에 열중하는 사진 등 \n 분위기를 보여줄 수 있는 사진이 매칭률을 높여줍니다 \n 좋은 화질은 상대를 위한 기본!</string>
    <string name="guide_not_recommend_explain">과한 필터나 스티커를 사용한 사진, \n 화질이 좋지 않은 사진은 매칭률을 떨어뜨려요!</string>
    <string name="guide_not_recommend_fourth">#좋지 않은 화질</string>
    <string name="guide_not_recommend_fifth">#과도한 필터나 스티커</string>
    <string name="title_not_recommend">추천하지 않는 사진</string>
    <string name="title_recommend">추천하는 사진</string>

    <!-- Profile Picture Dialog -->
    <string name="dialog_picture_title">프로필 사진 추가</string>
    <string name="dialog_picture_get">앨범에서 가져오기</string>
    <string name="dialog_picture_cancel">취소</string>
    <string name="dialog_picture_modify">프로필 사진 변경</string>
    <string name="dialog_picture_main">대표사진 설정</string>
    <string name="dialog_picture_remove">삭제</string>

    <!-- Interview Picture Dialog -->
    <string name="dialog_interview_modify">인터뷰 사진 변경</string>
    <string name="dialog_interview_title">인터뷰 사진 추가</string>

    <!-- Interview -->
    <string name="interview_title">인터뷰</string>
    <string name="interview_explain">상대에게 당신을 좀 더 알려주세요!</string>
    <string name="interview_strength">장점</string>
    <string name="interview_love">연애</string>
    <string name="interview_like">호불호</string>
    <string name="interview_life">라이프</string>
    <string name="interview_photo_explain">본인의 라이브 스타일을 \n 잘 보여주는 사진을 \n 업로드 해주세요</string>

    <!-- Scan -->
    <string name="scan_title">상대 찾기</string>
    <string name="scan_tab_find">FIND</string>
    <string name="scan_tab_found">FOUND</string>

    <!-- Find -->
    <string name="find_value_title">나의 가치관은?</string>
    <string name="find_opponent_title">상대의 성향은?</string>
    <string name="find_empty">설정해두신 가치관이 없어요!\n가치관 필터로 맞는 상대를 찾아보아요!</string>
    <string name="find_value">가치관 문답하러가기</string>
    <string name="find_complementary">나와\n 다르기에 매력적인\n사람을 찾아요!\n(상호보완성)</string>
    <string name="find_similarity">나와\n닮은 점이\n많은 사람을 원해요!\n(상호 유사성)</string>
    <string name="find_bang">FIND!</string>
    <string name="found_introduce">%d살 | %s | %s | %s</string>

    <!-- Values -->
    <string name="value_question">가치관 문답</string>
    <string name="value_select">가치관 선택</string>
    <string name="value_relationship">관계</string>
    <string name="value_family">가족</string>
    <string name="value_career">커리어</string>

    <!-- Question -->
    <string name="question_prev">이전</string>
    <string name="question_next">다음</string>
    <string name="question_position">%d/10</string>

    <!-- Search -->
    <string name="search_title">검색중...</string>
    <string name="search_complementary">당신과 다르기에\n매력적인 사람을\n찾고 있어요...</string>
    <string name="search_similarity">당신과 닮은 점이\n많은 사람을\n찾고있어요...!</string>

    <!-- Answer -->
    <string name="answer_title">당신과 다르기에 더욱 매력적인</string>
    <string name="answer_value_question">님의 가치관 문답</string>
    <string name="answer_value_filter">가치관 필터</string>
    <string name="answer_what_value">어떤 가치관을 기준으로 매칭되었을까요?</string>
    <string name="answer_opponent_value">상대는 어떤 사람일까요, 확인해 보세요 :)</string>

    <!-- Dialog -->
    <string name="found_not_find">FIND 버튼을 눌러\n상대를 먼저 검색하세요!</string>
    <string name="would_you_like_to_save">저장하시겠습니까?</string>
    <string name="dialog_disconnect_title">상대와의 연결을 해제합니다.</string>
    <string name="dialog_disconnect_content">연결된 상대에서 리스트가 사라집니다.</string>

    <!-- Matching -->
    <string name="matching_title">매칭 현황</string>
    <string name="matching_feeling">호감</string>
    <string name="matching_dibs">찜</string>

    <!-- Feeling -->
    <string name="feeling_connected_title">연결된 상대</string>
    <string name="feeling_connected_empty">연결된 상대가 아직 없어요!\n마음에 드는 상대에게 호감을 보내세요!</string>
    <string name="feeling_connected_introduce">%d살 | %s | %s</string>
    <string name="feeling_get_title">받은 호감</string>
    <string name="feeling_get_empty">받은 호감이 아직 없어요!\n마음에 드는 상대에게 호감을 보내세요!</string>
    <string name="feeling_send_title">보낸 호감</string>
    <string name="feeling_send_empty">보낸 호감이 아직 없어요!\n마음에 드는 상대에게 호감을 보내세요!</string>
    <string name="feeling_accept">호감 수락</string>

    <!-- Dibs -->
    <string name="dibs_me_title">나를 찜한 사람</string>
    <string name="dibe_me_empty">나를 찜한 사람이 없어요!</string>
    <string name="dibs_my_title">내가 찜한 사람</string>
    <string name="dibs_my_empty">내가 찜한 사람이 없어요!</string>

    <!-- AnyWhere -->
    <string name="complete">완료</string>
    <string name="save">저장</string>
    <string name="confirm">확인</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="modify">수정하기</string>

</resources>