<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="infoDialog"
            type="find.ui.ui.profile.InfoDialogFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_info_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="99dp"
            android:text="@string/dialog_info_job"
            android:textColor="@color/black_33"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_info_dialog_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/dialog_info_limit"
            android:textColor="@color/gray_bd"
            android:textSize="9dp"
            app:layout_constraintStart_toStartOf="@id/title_info_dialog"
            app:layout_constraintTop_toBottomOf="@id/title_info_dialog"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/et_info_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/dialog_info_enter"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="8"
            android:text="@={infoDialog.textInputInfo}"
            android:textColor="@color/black"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_info_dialog_limit"
            tools:ignore="SpUsage" />

        <ImageView
            android:id="@+id/img_info_dialog_divide"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/border_top_1_gray_bd_fill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_info_dialog"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btn_info_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="46dp"
            android:background="@android:color/transparent"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/dialog_info_ok"
            android:textColor="@color/black_33"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_info_dialog_divide"
            tools:ignore="SpUsage" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>